--- a/css/jellySlider.css
+++ b/css/jellySlider.css
@@ -15,6 +15,11 @@
   width: 100%;
   height: 100%;
   font-size: 12px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .jelly-slider .jelly-prev {
