--- a/css/jellySlider.scss
+++ b/css/jellySlider.scss
@@ -11,6 +11,12 @@
             width: 100%;
             height: 100%;
             font-size: 12px;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
         }
     }
     &.jelly-activated {
