--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,20 @@
+@charset "UTF-8";
+@font-face {
+  font-family: 'D2 coding';
+  font-style: normal;
+  font-weight: 400;
+  src: url("D2Coding.eot");
+  src: local("※"), local("D2Coding"), url("D2Coding.eot?#iefix") format("embedded-opentype"), url("D2Coding.woff2") format("x-woff2"), url("D2Coding.woff") format("woff"), url("D2Coding.ttf") format("truetype"), url("D2Coding.svg") format("svg");
+}
+
+@font-face {
+  font-family: 'D2 coding';
+  font-style: normal;
+  font-weight: 700;
+  src: url("D2CodingBold.eot");
+  src: local("※"), local("D2Coding Bold"), url("D2CodingBold.eot?#iefix") format("embedded-opentype"), url("D2CodingBold.woff2") format("x-woff2"), url("D2CodingBold.woff") format("woff"), url("D2CodingBold.ttf") format("truetype"), url("D2CodingBold.svg") format("svg");
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -16,8 +33,10 @@ body {
 
 .tit {
   font-weight: 700;
-  font-size: 30px;
+  font-size: 40px;
   text-align: center;
+  color: #000;
+  letter-spacing: 3px;
 }
 
 .list {
@@ -26,12 +45,13 @@ body {
 }
 
 .list > li + li {
-  margin: 20px 0 0;
+  margin: 30px 0 0;
 }
 
 .list > li .sec-tit {
   font-weight: 700;
-  font-size: 15px;
+  font-size: 20px;
+  text-transform: uppercase;
 }
 
 .list > li .cont-box {
@@ -41,11 +61,23 @@ body {
 .list > li .cont-box .box {
   width: 100%;
   height: 200px;
-  background: coral;
+  background: #e1e1e1;
   font-weight: 700;
   font-size: 50px;
   text-align: center;
   line-height: 200px;
+  color: #fff;
+}
+
+.list > li .cont-box .code-area {
+  margin: 20px 0 0;
+  border-radius: 5px;
+  padding: 20px;
+  background: #1e1e1e;
+}
+
+.list > li .cont-box .code-area pre {
+  font-family: 'D2 coding', sans-serif;
   color: #fff;
 }
 /*# sourceMappingURL=common.css.map */
