--- a/css/common.scss
+++ b/css/common.scss
@@ -1,3 +1,28 @@
+@font-face {
+    font-family: 'D2 coding';
+    font-style: normal;
+    font-weight: 400;
+    src: url('D2Coding.eot');
+    src: local('※'), local('D2Coding'),
+        url('D2Coding.eot?#iefix') format('embedded-opentype'),
+        url('D2Coding.woff2') format('x-woff2'),
+        url('D2Coding.woff') format('woff'),
+        url('D2Coding.ttf') format('truetype'),
+        url('D2Coding.svg') format('svg');
+}
+@font-face {
+    font-family: 'D2 coding';
+    font-style: normal;
+    font-weight: 700;
+    src: url('D2CodingBold.eot');
+    src: local('※'), local('D2Coding Bold'),
+        url('D2CodingBold.eot?#iefix') format('embedded-opentype'),
+        url('D2CodingBold.woff2') format('x-woff2'),
+        url('D2CodingBold.woff') format('woff'),
+        url('D2CodingBold.ttf') format('truetype'),
+        url('D2CodingBold.svg') format('svg');
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -18,8 +43,10 @@ body {
 
 .tit {
     font-weight: 700;
-    font-size: 30px;
+    font-size: 40px;
     text-align: center;
+    color: #000;
+    letter-spacing: 3px;
 }
 
 .list {
@@ -27,23 +54,35 @@ body {
     list-style: none;
     & > li {
         & + li {
-            margin: 20px 0 0;
+            margin: 30px 0 0;
         }
         .sec-tit {
             font-weight: 700;
-            font-size: 15px;
+            font-size: 20px;
+            text-transform: uppercase;
         }
         .cont-box {
             margin: 10px 0 0;
             .box {
                 width: 100%;
                 height: 200px;
-                background: coral;
+                background: #e1e1e1;
                 font-weight: 700;
                 font-size: 50px;
                 text-align: center;
                 line-height: 200px;
                 color: #fff;
+            }
+            .code-area {
+                margin: 20px 0 0;
+                border-radius: 5px;
+                padding: 20px;
+                background: #1e1e1e;
+                pre {
+                    font-family: 'D2 coding', sans-serif;
+                    color: #fff;
+
+                }
             }
         }
     }
